* Release 4.0.0
	* Fixed Bug #77: Get L1, L2, and L3 cache info from lscpu

06/10/2017 Release 3.3.0
	* Fixed Bug #70: subprocess.Popen breaks under Windows GUI app
	* Fixed Bug #72: Fails to parse invalid CPUID result.

04/19/2017 Release 3.2.0
	* Fixed Bug #68: Broken Qemu guest CPU flag parsing on Ubuntu 17.04 POWER8

04/19/2017 Release 3.1.0
	* Fixed Bug #63: Include py-cpuinfo version in output
	* Fixed Bug #29: Missing AVX2 CPU flag on OS X
	* Fixed Bug #41: Broken on Odroid XU3 armhf ARM 32bit
	* Fixed Bug #61: Not working on RHEL7.3 ppc64le
	* Fixed Bug #56: Not working on Red Flag Linux ppc64le
	* Fixed Bug #55: Not working on Fedora 24 ppc64le

04/05/2017 Release 3.0.0
	* Change API to hide low level functions
	* Fixed Bug #51: Combine data from all sources instead of picking one
	* Fixed Bug #59: Not working on OS X 10.12 Sierra
	* Fixed Bug #58: Change version number format
	* Fixed Bug #60: Not working on ARM64 odroid-c2

03/13/2017 Release 0.2.7
	* Fixed Bug #53: CPUID breaks test suite when SE Linux is on (Fedora 25)
	* Fixed Bug #54: CPUID breaks when it returns nothing (Fedora 26)

02/27/2017 Release 0.2.6
	* New release because pypi does not allow deleting broken uploads

02/27/2017 Release 0.2.5
	* New release because pypi does not allow deleting broken uploads

02/27/2017 Release 0.2.4
	* Fixed Bug #35: Add basic documentation
	* Fixed Bug #36: Make test suite test real functions too
	* Fixed Bug #38: get_cpu_info_from_cpuid breaks with Python3
	* Fixed Bug #47: Include sysctl leaf7_features and extfeatures flags

02/23/2016 Release 0.2.3
	* Fixed Bug #34: Fixed issue with imports breaking in python3

02/23/2016 Release 0.2.2
	* Same as previous release. Pypi bug broke uploaded files.

02/23/2016 Release 0.2.0
	* Fixed Bug #32: Please ship tests to pypi
	* Fixed Bug #31:  Make "python -m cpuinfo" possible
	* Fixed Bug #5: Importing is different depending on install method

12/16/2015 Release 0.1.8